# clickhouse-cli

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yml
clickhouse_cli/: __init__.py  __main__.py  cli.py  clickhouse-cli.rc.sample  config.py  helpers.py
clickhouse_cli/clickhouse/: client.py  definitions.py  exceptions.py  sqlparse_patch.py
clickhouse_cli/ui/: completer.py  lexer.py  prompt.py  style.py
clickhouse_cli/ui/parseutils/: ctes.py  helpers.py  meta.py  tables.py  utils.py
tests/: test_cli.py
