[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clickhouse-cli"
description = "A third-party client for the Clickhouse DBMS server."
authors = [{name = "Igor Hatarist", email = "igor@hatari.st"}]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development",
]
requires-python = ">=3.7"
dependencies = [
    "click>=6.6",
    "prompt-toolkit>=2.0",
    "pygments>=2.1.3",
    "requests>=2.11.1",
    "sqlparse>=0.2.2",
]

[project.urls]
Home = "https://github.com/hatarist/clickhouse-cli"
Documentation = "https://github.com/hatarist/clickhouse-cli"
Source = "https://github.com/hatarist/clickhouse-cli"
Tracker = "https://github.com/hatarist/clickhouse-cli/issues"

[project.scripts]
clickhouse-cli = "clickhouse_cli.cli:run_cli"

[project.optional-dependencies]
dev = [
    "flake8",
    "build",
]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
]
tox = [
    "virtualenv",
    "tox",
]

[tool.flit.sdist]
include = [
    "tests/*.py",
    "LICENSE.txt",
    "Makefile",
    "tox.ini",
]
